move Facebook init from Controller to run function

--- a/public/components/login/login.html
+++ b/public/components/login/login.html
@@ -1,6 +1,5 @@
 <h1 class="blue">{{ tagline }}</h1>
 <a href="/view2">View 2</a>
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
 <div id="status">
 </div>
+<button ng-click='testFunc()'>LogIn FB</button>
