--- a/public/components/view2/view2.html
+++ b/public/components/view2/view2.html
@@ -2,3 +2,12 @@
 <a href="/">View 1</a>
 <div id="status">
 </div>
+
+<div>
+    <h2>Geocoding</h2>
+
+    <input ng-model="address">
+    <button ng-click="geocode()">Geocode!</button>
+
+    <p>Lat: {{lat}}, Long: {{long}}</p>
+</div>
