--- a/public/components/login/login.html
+++ b/public/components/login/login.html
@@ -1,5 +1,5 @@
 <h1 class="blue">{{ tagline }}</h1>
-<a href="/view2">View 2</a>
+<!--<a href="/view2">View 2</a>-->
 <div id="status">
 </div>
 <button ng-click='testFunc()'>LogIn FB</button>
