--- a/public/components/view2/view2.html
+++ b/public/components/view2/view2.html
@@ -1,8 +1,6 @@
 <h1 class="red">{{ tagline }}</h1>
-<a href="/">View 1</a>
 <div id="status">
 </div>
-<p>{{events}}</p>
 <div>
     <h2>Geocoding</h2>
 
@@ -11,3 +9,4 @@
 
     <p>Lat: {{lat}}, Long: {{long}}</p>
 </div>
+<a href="/home">Home</a>
