get current location using geolocation api

--- a/public/components/location/location.html
+++ b/public/components/location/location.html
@@ -1,12 +1,15 @@
 <h1 class="red">{{ tagline }}</h1>
 <div id="status">
 </div>
-<div>
+<p>Press to get current location</p>
+<button ng-click="getLocation()">My Location</button>
+
+<!--<div>
     <h2>Geocoding</h2>
 
     <input ng-model="address">
     <button ng-click="geocode()">Geocode!</button>
 
     <p>Lat: {{lat}}, Long: {{long}}</p>
-</div>
+</div>-->
 <a href="/home">Home</a>
