geolocation solved with promise

--- a/public/components/location/location.html
+++ b/public/components/location/location.html
@@ -3,6 +3,8 @@
 </div>
 <p>Press to get current location</p>
 <button ng-click="getLocation()">My Location</button>
+<br>
+<p>Lat: {{lat}} Long: {{long}}</p>
 
 <!--<div>
     <h2>Geocoding</h2>
