--- a/public/components/location/location.html
+++ b/public/components/location/location.html
@@ -1,10 +1,11 @@
 <h1 class="red">{{ tagline }}</h1>
 <div id="status">
 </div>
+<p>{{status}}</p>
 <p>Press to get current location</p>
-<button ng-click="getLocation()">My Location</button>
+<button ng-click="getLocation()">Find Events nearby</button>
 <br>
-<p>Lat: {{lat}} Long: {{long}}</p>
+
 
 <!--<div>
     <h2>Geocoding</h2>
@@ -14,4 +15,4 @@
 
     <p>Lat: {{lat}}, Long: {{long}}</p>
 </div>-->
-<a href="/home">Home</a>
+
